--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -1,7 +1,7 @@
 {{template "base" .}}
 
 {{define "content"}}
-    <div class="container">
+    {{/*<div class="container">
         <div class="row">
             <div class="col">
                 {{$res := index .Data "reservation"}}
@@ -66,5 +66,47 @@
                 </form>
             </div>
         </div>
+    </div>*/}}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h1 class="mt-5">Search for Availability</h1>
+
+                <form action="" method="post" class="needs-validation" novalidate>
+
+                    <div class="form-group mt-5">
+                        <label for=""first_name>First Name:</label>
+                        <input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off">
+                    </div>
+
+                    <div class="form-group">
+                        <label for=""last_name>Last Name:</label>
+                        <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                    </div>
+
+                    <div class="form-group">
+                        <label for=""email>Email:</label>
+                        <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phone">Phone Number:</label>
+                        <input type="phone" name="phone" id="phone" class="form-control" required autocomplete="off">
+                    </div>
+
+                    <hr>
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <input type="submit" class="btn btn-primary" value="Make Reservation">
+                    </div>
+
+
+                </form>
+
+            </div>
+        </div>
+
     </div>
 {{end}}
