--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -7,7 +7,8 @@
             <div class="col-md-6">
                 <h1 class="mt-5">Search for Availability</h1>
 
-                <form action="reservation.html" method="get">
+                <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
